[package]
name = "proxhy-gui"
version = "0.3.4"
edition = "2024"

[[bin]]
name = "proxhy-gui"
path = "src/main.rs"

[dependencies]
dirs = "5"
eframe = "0.31"
egui = "0.31"
reqwest = { version = "0.12", features = ["blocking", "json"] }
self_update = {
  version = "0.41",
  features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
  ]
}
serde_json = "1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[lints.clippy]
nursery = "warn"
pedantic = "warn"
